@@ -1,6 +1,7 @@
-package com.azure.migration.java.copilot.service.command;
+package com.azure.migration.java.copilot.command;
 
 import org.beryx.textio.TextTerminal;
+import org.fusesource.jansi.Ansi;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -12,9 +13,9 @@ public class HelpCommand implements MigrationCommand {
 
     @Override
     public void execute(String commandText) {
-        terminal.println("Available commands:");
+        terminal.println(Ansi.ansi().bold().a("Available commands:").reset().toString());
         for (String cmd: MigrationCommand.availableCommands()) {
-            terminal.println(String.format("  %s", cmd));
+            terminal.println("  %s".formatted(cmd));
         }
     }
 }
